<!--
  ~ Herakles - Sports Activity Tracking App for Android
  ~ Copyright (c) 2017 Fabian Klemp
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Herakles</string>
    <string name="app_name_debug">Herakles Debug</string>
    <string name="button_label_start">Start</string>
    <string name="button_label_stop">Stop</string>
    <string name="button_label_new">New</string>
    <string name="text_label_time">Time:</string>
    <string name="text_label_distance">Distance:</string>
    <string name="text_label_satellites">Satellites:</string>
    <string name="text_label_gps_error">Error:</string>
    <string name="permission_request_intro">permissions:</string>
    <string name="permission_request_storage">Storage access to store map tiles.</string>
    <string name="permission_request_location">Location to show user location.</string>
    <string name="permission_response_granted">All permissions granted.</string>
    <string name="permission_response_location">Location permission is required to show the user\'s location on map.</string>
    <string name="permission_response_storage">Storage permission is required to store map tiles to reduce data usage and for offline usage.</string>
    <string name="nav_open">Open navigation</string>
    <string name="nav_close">Close navigation</string>
    <string name="delete_dialog_title">Delete?</string>
    <string name="delete_dialog_text">Are you sure that you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_label_list_empty">No logs available</string>
    <string name="notification_running">running</string>
    <string-array name="navigation_menu">
        <item>Track</item>
        <item>Log</item>
    </string-array>
</resources>
